--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "testing-basico-javascript",
+  "name": "tateti",
   "version": "1.0.0",
-  "description": "Ejemplo basico de pruebas automatizadas en JavaScript",
-  "main": "index.js",
+  "description": "Ejemplo de TDD con Mocha y Express",
+  "main": "app.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "mocha --reporter spec",
-    "coverage": "nyc --reporter=html mocha "
+    "coverage": "nyc --reporter=html mocha"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "mocha": "^9.2.2",
+    "nyc": "^15.1.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LucastuFett/testing-basico-javascript.git"
+    "url": "https://github.com/LucastuFett/TestingTateti.git"
   },
-  "author": "Lucas Gutierrez <lucasgutie2003@gmail.com",
-  "license": "MIT",
-  "homepage": "https://github.com/LucastuFett/testing-basico-javascript#readme",
-  "devDependencies": {
-    "chai": "^4.3.10",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-license-header": "^0.6.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "prettier": "3.0.3",
-    "proxyquire": "^2.1.3",
-    "sinon": "^16.0.0"
-  }
+  "author": "Lucas Gutierrez (lucasgutie2003@gmail.com)",
+  "license": "ISC",
+  "keywords": [
+    "server",
+    "express",
+    "mocha",
+    "tdd examle",
+    "tateti"
+  ]
 }
